Change text to text of song

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
 <body>
     <div>
         <h1>Kazik - Twój ból jest lepszy niż mój </h1>
-        <h3>Tekst</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus necessitatibus dignissimos aperiam quod ut deserunt reprehenderit perferendis neque veritatis hic commodi, officiis ipsum quasi, numquam ad delectus rem unde quam!</p>
-        <h3>Drugi tytuł</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium a aperiam quo voluptatum neque architecto sed assumenda, numquam unde repudiandae nemo, possimus quos rem dolorum officia eligendi dolore magnam sapiente.</p>
-
-
-
+        <h3>Tekst piosenki</h3>
+        <p>Zamknięte cmentarze to na skutek zdarzeń<br>
+            ostatnich tygodni, ostatnich wydarzeń<br>
+            na łańcuchy patrzę, ocieram łzy<br>
+            tak jak i Ty<br>
+            tak jak i Ty<br>
+            <br>
+            Otwiera się brama, ja nie wierzę oczom<br>
+            czy jednak się rzeczy inaczej potoczą<br>
+            podbiegam, Twoje karki krzyczą stój,<br>
+            bo Twój ból jest lepszy niż mój,<br>
+            Twój ból jest lepszy niż mój<br>
+            <br>
+            Ból ukoić możesz Ty jeden<br>
+            wszyscy inni wpadli w biedę<br>
+            limuzyny dwie jedna cały cmentarz Twój<br>
+            lepszy niż mój</p>
     </div>
 </body>
 
