--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <h1>Kazik - Twój ból jest lepszy niż mój </h1>
+        <h1>Kazik - Twój bul jest lepszy niż muj </h1>
         <h3>Tekst piosenki</h3>
         <p>Zamknięte cmentarze to na skutek zdarzeń<br>
             ostatnich tygodni, ostatnich wydarzeń<br>
